--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link rel='stylesheet' href='assets/css/style.css'>
- <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
- <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
-  
-  
-
-
 
 </head>
 
@@ -91,8 +85,12 @@
   </div>
   </div>
 
-  
+  <!-- Make sure to load all JS files at the bottom of your html files so they don't block rendering  -->
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
   <script src="https://code.jquery.com/jquery.js"></script>
+
+  <!-- As always, load your scripts after any libs/dependencies  -->
   <script src="./assets/javascript/app.js"></script>
 
 
